# ai-playground

./: .coverage  .env.template  .flake8  .gitignore  .gitleaks.toml  .isort.cfg  .pre-commit-config.yaml  Dockerfile  LICENSE  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  README.md  coverage.xml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test-results.xml  test_mcp_connection.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml  labeler.yml  markdown-link-check-config.json
agents/airflow_intelligence/: .env.example  GETTING_STARTED.md  PROJECT_OVERVIEW.md  README.md  __init__.py  docker-compose.yml  pyproject.toml  requirements.txt
agents/airflow_intelligence/deploy/: Dockerfile  deploy.sh
agents/airflow_intelligence/deploy/kubernetes/: cronjob.yaml  deployment.yaml
agents/airflow_intelligence/deploy/systemd/: airflow-intelligence-agent.service
agents/airflow_intelligence/docs/architecture/: roadmap.md
agents/airflow_intelligence/docs/deployment/: setup-guide.md
agents/airflow_intelligence/docs/development/: PERSISTENT_MEMORY_EXPLAINED.md
agents/airflow_intelligence/docs/guides/: QUICK_REFERENCE.md  failure-pattern-analysis.md  memory-system.md  proactive-monitoring.md  quickstart-failure-analysis.md  quickstart-memory.md  quickstart-proactive.md  usage.md
agents/airflow_intelligence/examples/: example_beautiful_slack_report.py  run_agent.py  test_slack_connection.py
agents/airflow_intelligence/src/: __init__.py  __main__.py
agents/airflow_intelligence/src/cli/: __init__.py  commands.py
agents/airflow_intelligence/src/core/: __init__.py  agent.py  config.py  llm_provider.py  memory.py  orchestrator.py
agents/airflow_intelligence/src/monitoring/: __init__.py  proactive_monitor.py
agents/airflow_intelligence/src/tools/: __init__.py  analysis.py  database.py  registry.py  slack.py
agents/airflow_intelligence/src/utils/: __init__.py  slack_formatter.py
agents/airflow_intelligence/tests/: test_failure_pattern_analysis.py  test_memory_integration.py
k8s/: cronjob.yaml  deployment.yaml
(+16 files in other folders)
